fix alignment of hamburger menu some more

--- a/responsive.css
+++ b/responsive.css
@@ -32,7 +32,7 @@
 		display: inline-block;
 		position: absolute;
 		right: 5px;
-		top: -5px;
+		top: -10px;
 	}
 
 	nav {
